fixed location thing, apparently theres a better way to do it so im told but i dont wanna.